--- a/Group Project/index.css
+++ b/Group Project/index.css
@@ -23,6 +23,14 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+
+.layer2 {
+  width: 100%;
+  position: relative;
+  text-align: center;
+  z-index: 101;
+}
+
 .h2 {
   color: #800020;
 }
